--- a/src/pages/app/App.css
+++ b/src/pages/app/App.css
@@ -1,11 +1,23 @@
 .App {
-    padding-top: 25px;
+    margin: 0 auto;
+    min-width: 1024px;
+    overflow: hidden;
+    width: 100%;
+    background-image: url("../../imgs/bg.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+    left: 0;
+    top: 0;
+    z-index: -1;
+
 }
 
 .header {
     padding-left: 65px;
-    align-items: center;
+    padding-top: 25px;
     display: flex;
+    position: fixed;
 }
 
 .header_btn {
@@ -20,13 +32,8 @@
 }
 
 footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 30px;
     z-index: 99;
-}
-
-.company {
-    margin-left: 69px;
+    bottom: 10px;
+    left: 66px;
+    position: absolute;
 }
